# fishare

./: .gitignore  Dockerfile  Dockerfile.alpine  README.md  env.template  local.env  pokedex.sqlite  pokemon.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  template.env
docs/: readme.md
docs/day.1/: 01-installation.md  02-hello.world.md  05-installation.md  10-hello.world.md  15-running.app.md  20-api.docs.md  25-url.scheme.md  30-file.model.md  35-validators.md
fishare/: .env.template  __init__.py  core.py  database.py  decorators.py  dependencies.py  helper.py  helpers.py  main.py  middlewares.py  pokemon.py
fishare/api/: cron.py  download.py  files.py  health.py  healthcheck.py  users.py
fishare/api/v1/: cron.py  download.py  files.py
fishare/core/: decorators.py  responses.py
fishare/models/: file.py  file_details.py  file_details_out.py  logconfig.py  pager.py  problem_details.py  settings.py
fishare/static/css/: style.css
fishare/static/js/: app.js
fishare/templates/: admin.html  base.html  deleted.html  home.html  home.tpl.html  homepage.tpl.html  uploaded.html
fishare/views/: admin.py  cron.py  download_file.py  health.py  homepage.py  uploaded.py
static/: style.css
templates/: home.html  uploaded.html
tests/: test_files.py  test_fishare.py
tests/api/: test_files.py
tests/files/: test_pager.py
tests/models/: test_file.py
