[tool.poetry]
name = "fishare"
version = "0.1.0"
description = "Python 202 course project. Free implementation of fishare.io service."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
pytest = "^7.2.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
