[tool.poetry]
name = "fishare"
version = "0.1.0"
description = "Python 202 course project. Free implementation of fishare.io service."
authors = ["Miroslav Biňas <miroslav.binas@tuke.sk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
sqlmodel = "^0.0.8"
sqladmin = "^0.8.0"
jinja2 = "^3.1.2"
fastapi-utils = "^0.2.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
pytest = "^7.2.0"
black = "^22.10.0"
httpx = "^0.23.1"
faker = "^15.3.3"
litecli = "^1.9.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fishare = "fishare.main:main"  # python - m fishare.main

[tool.pytest.ini_options]
addopts = []
testpaths = ["tests/"]
python_files = ["test_*.py"]
markers = [
    "wip: work in progress",
    "models",
    "file",
    "api",
    "files"
]
